@@ -5,7 +5,7 @@ import os
 import sys
 from time import time
 from PSCalib.DCMethods import add_constants, get_constants, delete_version, delete_range, delete_ctype,\
-     print_file, print_file_content
+     print_content, print_content_from_file
 import PSCalib.DCUtils as dcu
 
 #------------------------------
@@ -113,8 +113,8 @@ class DCS_CLI :
         mode   = self.args[0]
         action = mode[0]
         if   action=='p':
-          if fname is not None : print_file(fname)
-          else                 : print_file_content (env, src, cdir)
+          if fname is not None : print_content_from_file(fname)
+          else                 : print_content(env, src, cdir)
         elif action=='a'       : self.add_constants (evt, env, src, ctype, cdir, vers, pred, succ, msg, verb)
         elif action=='g'       : self.get_constants (evt, env, src, ctype, cdir, vers, verb)
         elif 'delv' in mode    : self.delete_version(evt, env, src, ctype, cdir, vers, msg, verb)
